# OpenTaalas

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: FindACTypes.cmake  FindChiselTools.cmake  FindKanagawaCompiler.cmake  FindORFS.cmake  FindSystemC.cmake  FindVerilator.cmake
docs/: backend-metrics.md  file-map.md  orfs-flow-review.md  orfs-flow-todo.md  orfs-reference.md  pnr-reports.md  project-status.md  transistor-budget-53B.md  tsmc-3nm-projection.md  verilator-testing.md
docs/outdated/: README.md  pnr-reports.md
docs/plans/: 2026-02-25-llama31-8b-accelerator-design.md  2026-02-25-llama31-8b-implementation.md  2026-02-25-validation-pipeline-design.md  2026-02-25-validation-pipeline-plan.md  2026-02-26-full-layer-blackbox-rom-design.md  2026-02-26-full-layer-blackbox-rom-plan.md  2026-02-26-iq3s-hardware-adoption-design.md  2026-02-26-iq3s-hardware-adoption-plan.md  2026-02-26-verilator-cosim-design.md  2026-02-26-verilator-cosim-plan.md  2026-02-27-layer-e2e-verification-design.md  2026-02-27-layer-e2e-verification-plan.md  2026-02-27-real-data-e2e-design.md  README.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-03-10-backend-pnr.md  2026-03-11-stage1a-kanagawa-wide-word.md  2026-03-17-density-improvement.md
docs/superpowers/specs/: 2026-03-10-backend-pnr-design.md  2026-03-11-sram-rom-macro-integration-design.md  2026-03-17-density-improvement-design.md
flow/: CMakeLists.txt
flow/designs/: kanagawa_runtime.mk  kanagawa_runtime_sky130.mk
flow/designs/sky130hd/async_fifo/: config.mk  constraint.sdc
flow/designs/sky130hd/attention_unit/: config.mk
flow/designs/sky130hd/codebook_decoder/: config.mk  macro_place.tcl
flow/designs/sky130hd/dequant/: config.mk
flow/designs/sky130hd/embed_rom/: config.mk  macro_place.tcl
flow/designs/sky130hd/global_controller/: config.mk
flow/designs/sky130hd/kv_cache/: config.mk
flow/designs/sky130hd/kv_cache_demo/: config.mk  macro_place.tcl
flow/designs/sky130hd/layer_orchestrator/: config.mk  constraint.sdc
flow/designs/sky130hd/layer_tile/: config.mk
flow/designs/sky130hd/llama_chip/: config.mk
flow/designs/sky130hd/lm_head/: config.mk
flow/designs/sky130hd/lm_head_demo/: config.mk  macro_place.tcl
flow/designs/sky130hd/lut_interp/: config.mk
flow/designs/sky130hd/mac_array/: config.mk  macro_place.tcl
flow/designs/sky130hd/mac_pe/: config.mk
flow/designs/sky130hd/multi_layer_chip/: config.mk  constraint.sdc  macro_place.tcl  pdn.tcl
flow/macros/sky130hd/: nor_rom_1024x880.bb.v  nor_rom_1024x880.gds  nor_rom_1024x880.lef  nor_rom_1024x880.lib  nor_rom_4096x1024.bb.v  nor_rom_4096x1024.gds  nor_rom_4096x1024.lef  nor_rom_4096x1024.lib  nor_rom_4096x192.bb.v  nor_rom_4096x192.gds  nor_rom_4096x192.lef  nor_rom_4096x192.lib  nor_rom_4096x192.v  nor_rom_4096x192_phys.bb.v  nor_rom_4096x192_phys.gds  nor_rom_4096x192_phys.lef  nor_rom_4096x192_phys.lib  nor_rom_65536x192.bb.v  nor_rom_65536x192.gds  nor_rom_65536x192.lef  nor_rom_65536x192.lib  nor_rom_65536x192.v  nor_rom_65536x192_phys.bb.v  nor_rom_65536x192_phys.gds  nor_rom_65536x192_phys.lef  nor_rom_65536x192_phys.lib  rope_apply.bb.v  rope_apply.lib  rope_gen.bb.v  rope_gen.lib  sram_256x16.bb.v  sram_256x16.gds  sram_256x16.lef  sram_256x16.lib  sram_4096x16.bb.v  sram_4096x16.gds  sram_4096x16.lef  sram_4096x16.lib  sram_4096x8.bb.v  sram_4096x8.gds  (+14 more)
flow/scripts/: run_orfs.sh
model/: CMakeLists.txt
model/systemc/: CMakeLists.txt
model/systemc/include/opentaalas/: types.h
model/systemc/src/: attention_unit.h  bf16_math.h  codebook_decoder.h  dequant.h  embed_rom.h  global_controller.h  kv_cache.h  layer_tile.h  llama_chip.h  lm_head.h  lut_interp.h  mac_array.h  mac_pe.h  rmsnorm.h  rom_bank.h  rope.h  scale_store.h  swiglu.h  vector_unit.h
rtl/: CMakeLists.txt
rtl/chisel/: build.sc
rtl/hal/sky130/: hal_dual_port_ram.sv
rtl/kanagawa/: attention_unit.k  codebook_decoder.k  dequant.k  embed_rom.k  global_controller.k  kv_cache.k  kv_cache_demo.k  layer_orchestrator.k  layer_tile.k  llama_chip.k  lm_head.k  lm_head_demo.k  lut_interp.k  mac_array.k  mac_pe.k  rmsnorm.k  rom_bank.k  rope.k  rope_apply.k  rope_gen.k  scale_store.k  smoke_accumulator.k  smoke_adder.k  swiglu.k  vector_unit.k
rtl/sv/: async_fifo.sv  multi_layer_chip_wrapper.sv  transformer_layer_block.sv  transformer_layer_wrapper.sv
scripts/: gen_layer_block_min.py  llama-rtl-test.sh  render_full_chip.py  render_multi_layer_chip.py  smoke-test.sh
test/: CMakeLists.txt
test/systemc/: CMakeLists.txt  test_attention_unit.cpp  test_bf16_math.cpp  test_codebook_decoder.cpp  test_dequant.cpp  test_embed_rom.cpp  test_gguf_converter.cpp  test_global_controller.cpp  test_kv_cache.cpp  test_layer_tile.cpp  test_llama_chip.cpp  test_lm_head.cpp  test_lut_interp.cpp  test_mac_array.cpp  test_mac_pe.cpp  test_rmsnorm.cpp  test_rom_bank.cpp  test_rom_sv_generator.cpp  test_rope.cpp  test_scale_store.cpp  test_swiglu.cpp  test_vector_unit.cpp  test_weight_generator.cpp
test/verilator/: CMakeLists.txt  hal_sparse_ram.sv  kanagawa_harness.h  test_vl_attention_unit.cpp  test_vl_codebook_decoder.cpp  test_vl_dequant.cpp  test_vl_embed_rom.cpp  test_vl_global_controller.cpp  test_vl_kv_cache.cpp  test_vl_layer_e2e.cpp  test_vl_layer_real_data.cpp  test_vl_layer_tile.cpp  test_vl_llama_chip.cpp  test_vl_lm_head.cpp  test_vl_lut_interp.cpp  test_vl_mac_array.cpp  test_vl_mac_pe.cpp  test_vl_rmsnorm.cpp  test_vl_rom_bank.cpp  test_vl_rope.cpp  test_vl_rope_cascade.cpp  test_vl_scale_store.cpp  test_vl_swiglu.cpp  test_vl_transformer_layer.cpp  test_vl_vector_unit.cpp
tools/: CMakeLists.txt  cmodel_runner.h  cmodel_runner_main.cpp  compare_tensors.cpp  generate_layer_roms.cpp  gguf_converter.cpp  gguf_converter.h  gguf_converter_main.cpp  llama_forward.cpp  llama_iq3s_forward.cpp  llama_quantized_forward.cpp  rom_sv_generator.h  tensor_extractor.cpp  tensor_io.h  weight_generator.h
tools/rom_compiler/: nor_rom_compiler.py  sram_compiler.py
(+25 files in other folders)
